...
        android:textStyle="bold"
        android:textSize="40dp"/>

<!--    <EditText-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/locationEditText"-->
<!--        android:background="@color/colorDivider"-->
<!--        android:layout_above="@+id/state"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:padding="5dp"-->
<!--        android:hint="Resto"-->
<!--        android:layout_centerHorizontal="true"/>-->

    <TextView
...
